samples/_failures_safe/1761152773_de693c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a3be11df.c: In function ‘main’:
./samples/SAFE/__tmp_a3be11df.c:160:5: error: expected declaration or statement at end of input
  160 |     if (result.compressed_size > 0) {
      |     ^~
./samples/SAFE/__tmp_a3be11df.c:160:5: error: expected declaration or statement at end of input
